Styling the the middle section of the webpage with the slider and monthly billing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .checkmark-list {
     list-style-image: url('./assets/icon-check.svg');
   }
+
+  .icon-slider {
+    list-style-image: url('./assets/icon-slider.svg');
+  }
